[project]
name = "prometheusbench"
version = "1.0.0"
description = "Short-prompt benchmark for ranking model permissiveness on unsafe biology, LLM research, and cybersecurity requests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Lore Hex Corp" }]
keywords = ["llm", "benchmark", "safety", "refusal", "evals"]

[project.urls]
Homepage = "https://github.com/Lore-Hex/PrometheusBench"
Issues = "https://github.com/Lore-Hex/PrometheusBench/issues"

[project.scripts]
prometheusbench = "prometheusbench.run:main"
prometheusbench-report = "prometheusbench.report:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
